fix: page top padding, wrap max-width

--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,13 @@
 
 .wrap {
   width: 100%;
-  max-width: 1212px;
+  max-width: 1170px;
   margin: 0 auto;
   box-sizing: border-box;
 }
 
 .page {
-  padding-top: 42px;
+  padding-top: 90px;
   padding-bottom: 110px;
   position: relative;
 }
@@ -90,7 +90,7 @@
   color: #202020;
   font-weight: 700;
   letter-spacing: -0.5px;
-  margin-top: 35px;
+  margin-top: 0;
   margin-bottom: 20px;
 }
 
